styles/main.css
/*
 * Globals
 */

/* Links */
a,
a:focus,
a:hover {
  color: #fff;
}

/* Custom default button */
.btn-secondary,
.btn-secondary:hover,
.btn-secondary:focus {
  color: #333;
  text-shadow: none; /* Prevent inheritance from `body` */
  background-color: #fff;
  border: .05rem solid #fff;
}


/*
 * Base structure
 */

html,
body {
  height: 100%;
  background-color: #202833;

}

body {
  display: -ms-flexbox;
  display: flex;
  color: #fff;
  text-shadow: 0 .05rem .1rem rgba(0, 0, 0, .5);

}

.full-background {
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  background-image: url("../images/laptop.jpg");

}

.cover-container {
  max-width: 70em;
  text-align: center;
}


/*
 * Header
 */
.masthead {
  margin-bottom: 50px
}

.masthead-brand {
  margin-bottom: 0;
}

.nav-masthead .nav-link {
  padding: .25rem 0;
  font-weight: 700;
  color: rgba(255, 255, 255, .5);
  background-color: transparent;
  border-bottom: .25rem solid transparent;
}

.nav-masthead .nav-link:hover,
.nav-masthead .nav-link:focus {
  border-bottom-color: rgba(255, 255, 255, .25);
}

.nav-masthead .nav-link + .nav-link {
  margin-left: 1rem;
}

.nav-masthead .active {
  color: #fff;
  border-bottom-color: #fff;
}



@media (min-width: 48em) {
  .masthead-brand {
    float: left;
  }
  .nav-masthead {
    float: right;
  }
}


/*
 * Cover
 */
.cover {
  padding: 0 1.5rem;
}
.cover .btn-lg {
  padding: .75rem 1.25rem;
  font-weight: 700;
}

.header-text-portfolio {
  padding-bottom: 50px;
}



hr{
  margin-bottom: 50;
}


.link {
  text-decoration: underline;
}

/*
*  protfolio page
*
*/

.port-row {
  background-color: #5580E9;
  border-radius: 4px;
  padding: 10;
  margin-top: 15px;
}

.portfolio-thumbnail {
  position: relative;
  height: auto;
  width: 90%;
  border-radius: 4px;
}

.portfolio-image {
  margin-top: 10px;
  margin-bottom: 10px;

}

.portfolio-text {
  margin-top: 10px;
  margin-bottom: 10px;
  padding: 15px;
  background-color: #202833;
  border-radius: 4px;
}

.jumbotron {
  background-color: #97C3C2;
  border-radius: 25px;
}

/*
*  Conact me page
*
*/

.contact-text {
  padding-top: 50px;
}

.contact-thumbnail {
  border-radius: 250px;
}

/* Featurettes
------------------------- */

.featurette-divider {
  margin: 5rem 0; /* Space out the Bootstrap <hr> more */
}

/* Thin out the marketing headings */
.featurette-heading {
  font-weight: 300;
  line-height: 1;
  letter-spacing: -.05rem;
}


/* RESPONSIVE CSS
-------------------------------------------------- */

@media (min-width: 40em) {
  /* Bump up size of carousel content */
  .carousel-caption p {
    margin-bottom: 1.25rem;
    font-size: 1.25rem;
    line-height: 1.4;
  }

  .featurette-heading {
    font-size: 50px;
  }
}

@media (min-width: 62em) {
  .featurette-heading {
    margin-top: 7rem;
  }
}




/*
 * Footer
 */
.mastfoot {
  color: rgba(255, 255, 255, .5);
}

